--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-"hello world"
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <![endif]-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <title></title>
+  <style>
+
+  </style>
+</head>
+<body>
+<div class="site-wrapper">
+<div class="site-wrapper-inner">
+<h1>Doyle Miles</h1>
+<img src="images/doylemiles.jpg">
+<p>Hi, welcome to my landing page. Below you will find links to my projects and portfolio.</p>
+  </div>
+  </div>
+</body>
+</html>
